Closed Bug 1157677 Opened 11 years ago Closed 11 years ago

Uninitialized members in mozilla::layers::ClientTiledLayerBuffer

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: nical, Assigned: u538564, Mentored)

References

(Blocks 1 open bug)

Details

(Keywords: coverity, Whiteboard: [gfx-noted])

Attachments

(1 file)

mCallback and mCallbackData are not initialized in the constructor. This can't cause bugs because we only read from them within PaintThebes where they are set, but adds to the warning noise.
Keywords: coverity
Hi Nicolas, I would like to work on this bug. Initializing mCallback and mCallbackData with nullptr is enough ?
(In reply to Thomas Escalon from comment #1) > Hi Nicolas, I would like to work on this bug. > > Initializing mCallback and mCallbackData with nullptr is enough ? Yes.
Assignee: nobody → tesc.bugzilla
Attached patch 1157677.diffSplinter Review
patch for initializing mCallback and mCallbackData
Attachment #8608685 - Flags: review?(nical.bugzilla)
Attachment #8608685 - Flags: review?(nical.bugzilla) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: