Bug 1157677 - Fix uninitialized members warning in ClientTiledLayerBuffer. r=nical